--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p id="numberOfGuesses"></p>
 
         <!-- Add the audio element here -->
-        <audio id="successSound" src="crore7.mp3" preload="auto"></audio>
+        <audio id="successSound" src="7crore❤.MP3" preload="auto"></audio>
     </div>
     <script src="script.js"></script>
 </body>
